sumo/tests/dfrouter/errors/triple_minus2/options.dfrouter
--detector-files=input_detectors.det.xml --detectors-poi-output detectors.poi.xml ---net-file=net.net.xml

